--- a/test/fixtures/articles.yml
+++ b/test/fixtures/articles.yml
@@ -1,3 +1,20 @@
+# == Schema Information
+#
+# Table name: articles
+#
+#  id              :integer          not null, primary key
+#  title           :text             not null
+#  journal_id      :integer
+#  volume          :string
+#  issue           :string
+#  date_published  :date
+#  article_url     :text
+#  dosage_included :boolean
+#  dosage_amt      :string
+#  created_at      :datetime         not null
+#  updated_at      :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined.  If you add columns to the
