--- a/test/fixtures/keywords.yml
+++ b/test/fixtures/keywords.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: keywords
+#
+#  id            :integer          not null, primary key
+#  name          :string           not null
+#  taggable_id   :integer
+#  taggable_type :string
+#  created_at    :datetime         not null
+#  updated_at    :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined.  If you add columns to the
